wacc_examples/invalid_TEST/semanticErr/function/functionDuplicateArg_US.wacc
# function parameter type mismatch

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
	int f(int x, int x) is
		return x+x
	end
  bool b = 3 ; 
  int x = call f(b,2) 
end
	
